--- a/package.json
+++ b/package.json
@@ -12,28 +12,28 @@
     "private": true,
     "dependencies": {
         "@angular/animations": "^6.1.0",
+        "@angular/cdk": "^6.4.1",
         "@angular/common": "^6.1.0",
         "@angular/compiler": "^6.1.0",
         "@angular/core": "^6.1.0",
         "@angular/forms": "^6.1.0",
         "@angular/http": "^6.1.0",
+        "@angular/material": "^6.4.1",
         "@angular/platform-browser": "^6.1.0",
         "@angular/platform-browser-dynamic": "^6.1.0",
         "@angular/router": "^6.1.0",
-        "core-js": "^2.5.4",
-        "rxjs": "^6.0.0",
-        "zone.js": "~0.8.26",
-        "@angular/cdk": "^6.4.1",
-        "@angular/flex-layout": "^6.0.0-beta.16",
-        "@angular/material": "^6.4.1",
         "@ngrx/store": "^6.0.1",
+        "core-js": "^2.5.4",
         "hammerjs": "^2.0.8",
-        "web-animations-js": "^2.3.1"
+        "rxjs": "^6.2.2",
+        "web-animations-js": "^2.3.1",
+        "zone.js": "~0.8.26"
     },
     "devDependencies": {
         "@angular-devkit/build-angular": "~0.7.0",
         "@angular/cli": "^6.1.3",
         "@angular/compiler-cli": "^6.1.0",
+        "@angular/flex-layout": "^6.0.0-beta.16",
         "@angular/language-service": "^6.1.0",
         "@types/jasmine": "~2.8.6",
         "@types/jasminewd2": "~2.0.3",
