--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@ Thumbs.db
 src/environments/environment.ts
 src/environments/environment.ts
 src/environments/environment.ts
+src/environments/environment.ts
