--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@ src/environments/environment.ts
 src/environments/environment.ts
 src/environments/environment.ts
 src/environments/environment.ts
+src/environments/environment.prod.ts
