--- a/angular.json
+++ b/angular.json
@@ -25,6 +25,7 @@
             "styles": [
               "src/styles.scss",
               "src/assets/css/normalize.css",
+              "src/assets/css/animate.css",
               "src/assets/scss/theme.scss"
             ],
             "scripts": []
